Zmiany dla androida

--- a/JATmegaJava/resources/config.properties
+++ b/JATmegaJava/resources/config.properties
@@ -2,5 +2,5 @@ interface=RS232
 baudRate=19200
 windows.driver=gnu.io.RXTXCommDriver
 windows.port=COM10
-linux.driver=gnu.io.RXTXCommDriver
+linux.driver\=gnu.io.RXTXCommDriver
 linux.port=/dev/ttyS0
