pierwsza wersja 2.0 , dziala juz TestCommand

--- a/JATmegaJava/resources/config.properties
+++ b/JATmegaJava/resources/config.properties
@@ -1,6 +1,8 @@
 interface=RS232
-baudRate=19200
+baudRate=28800
+windows.config=pl.mazon.jatmega.core.bus.RSBusConfig
+windows.bus=pl.mazon.jatmega.core.bus.RSBus.java
 windows.driver=gnu.io.RXTXCommDriver
-windows.port=COM10
-linux.driver\=gnu.io.RXTXCommDriver
+windows.port=COM3
+linux.driver=gnu.io.RXTXCommDriver
 linux.port=/dev/ttyS0
